[package]
name = "bestelampe"
version = "0.1.0"
authors = ["Lena Schimmel <mail@lenaschimmel.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_info"] }
esp-idf-svc = { version = "0.48.0", default-features = true }
embedded-svc = { version = "0.26.4" }
futures = "0.3.29"
anyhow = "1.0.76"
esp-idf-hal = "0.43.0"
esp-idf-sys = "0.34.0"
prisma = "0.1.1"
enumset = "1.1.3"
ds18b20 = "0.1.1"
one-wire-bus = "0.1.1"
serde = "1.0.196"
serde_json = "1.0.113"
toml-cfg = "=0.1.3"
# veml6040 = ""0.1.1"
veml6040 =  { git = "https://github.com/lenaschimmel/veml6040-rs.git", branch = "fix-read-all" }
function_name = "0.3.0"
chrono = "0.4.34"
chrono-tz = "0.8.6"
simple-error = "0.3.0"
heapless = "0.8.0"
nom = "7.1.3"
hex-literal = "0.4.1"
# veml6040 = { path = "../veml6040-rs" }
mr24hpc1 = { path = "../mr24hpc1" }

[build-dependencies]
embuild = "0.31.3"
toml-cfg = "=0.1.3"
