[package]
name = "bestelampe"
version = "0.1.0"
authors = ["Lena Schimmel <mail@lenaschimmel.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_info"] }
esp-idf-svc = { version = "0.49.1", default-features = true }
embedded-svc = { version = "0.26.4" }
embedded-hal-bus = "0.1.0"
futures = "0.3.29"
anyhow = "1.0.76"
esp-idf-hal = "0.44.1"
esp-idf-sys = "0.35.0"
prisma = "0.1.1"
enumset = "1.1.3"
ds18b20 = "0.1.1"
one-wire-bus = "0.1.1"
serde = "1.0.196"
serde_json = "1.0.113"
toml-cfg = "=0.1.3"
# The branch `feature/std-error` contains the same state as my local dir `../veml6040-rs` but
# it's not picked up by cargo if I use the github URL, so I have to use the local path
# veml6040 = ""0.1.1"
# veml6040 =  { git = "https://github.com/lenaschimmel/veml6040-rs.git", branch = "feature/std-error" }
veml6040 = { path = "../veml6040-rs" }
function_name = "0.3.0"
chrono = "0.4.34"
chrono-tz = "0.8.6"
simple-error = "0.3.0"
heapless = "0.8.0"
nom = "7.1.3"
hex-literal = "0.4.1"
mr24hpc1 = { path = "../mr24hpc1" }
lm75 = "1.0.0"
#ina219_rs = { git = "https://github.com/maxwen/ina219", branch = "master", version = "0.5.1"}
ina219 = { git = "https://github.com/scttnlsn/ina219", branch = "master", version = "0.2.0"}
ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"
tinyqoi = "0.2.0"
port-expander = "0.6.3"
embedded-hal = "1.0.0"
embedded-io-adapters = {version = "0.6.1", features = ["std"]}
#nmea-parser = "0.11.0"
microchip-24aa02e48 = "0.2.0"

[build-dependencies]
embuild = { version = "0.31.3", features = ["espidf"]}
toml-cfg = "=0.1.3"

[package.metadata.espflash]
partition_table = "partitions.csv"

[patch.crates-io]
cc = { git = "https://github.com/rust-lang/cc-rs", tag = "1.0.83" }
#esp-idf-hal = { path = "../esp-idf-hal" }
