[package]
name = "led-benchmark"
version = "0.1.0"
authors = ["Lena Schimmel <mail@lenaschimmel.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
esp-idf-sys = "0.34.0"
esp-idf-hal = "0.43.0"
esp-idf-svc = { version = "0.48.0", default-features = true }
embedded-svc = { version = "0.26.4" }
embedded-hal = "1.0.0"
veml6040 = { path = "../veml6040-rs" }
lm75 = "1.0.0"
embedded-hal-bus = "0.1.0"

anyhow = "1.0.76"
log = { version = "0.4", default-features = false }
num = "0.4.1"
rand = "0.8.5"
fastapprox = "0.3.1"
ina219_rs = { git = "https://github.com/maxwen/ina219", branch = "master", version = "0.5.1"}

[build-dependencies]
embuild = "0.31.4"

[patch.crates-io]
cc = { git = "https://github.com/rust-lang/cc-rs", tag = "1.0.83" }

[package.metadata.espflash]
partition_table = "partitions.csv"
