[package]
name = "slint-ui"
version = "0.1.0"
authors = ["Lena Schimmel <mail@lenaschimmel.de>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
log = "0.4.20"
prisma = "0.1.1"
slint = "1.0"
tiny-skia = "0.11.3"

[build-dependencies]
slint-build = "1.0"
